--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:mysql://database-2.cnwmm02yow4c.eu-north-1.rds.amazonaws.com:3306/database-2
+spring.datasource.url=jdbc:mysql://database-2.cnwmm02yow4c.eu-north-1.rds.amazonaws.com:3306/mydb?createDatabaseIfNotExist=true
 spring.datasource.username=admin
 spring.datasource.password=vimu123456
 spring.jpa.generate-ddl=true
