--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -12,9 +12,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      - name: Give execute permission to mvnw
+        run: chmod +x mvnw
+
       - name: Build WAR
-        run: |
-          ./mvnw clean package -DskipTests
+        run: ./mvnw clean package -DskipTests
 
       - name: Copy Files via SCP
         uses: appleboy/scp-action@v0.1.6
