--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,6 +34,16 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker stop springboot || true
-            docker rm springboot || true
+            echo "🔍 Checking for container using port 8080..."
+            CONTAINER_ID=$(docker ps -q --filter "publish=8080")
+            if [ -n "$CONTAINER_ID" ]; then
+              echo "🛑 Stopping container on port 8080..."
+              docker stop $CONTAINER_ID
+              docker rm $CONTAINER_ID
+            fi
+
+            echo "🧼 Removing old springboot container if exists..."
+            docker rm -f springboot || true
+
+            echo "🚀 Starting new springboot container..."
             docker run -d -p 8080:8080 --name springboot -v ~/app:/app openjdk:17 java -jar /app/*.war
