--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -46,4 +46,5 @@ jobs:
             docker rm -f springboot || true
 
             echo "🚀 Starting new springboot container..."
-            docker run -d -p 8080:8080 --name springboot -v ~/app:/app openjdk:17 java -jar /app/*.war
+            docker build -t springboot-app .
+            docker run -d -p 8080:8080 springboot-app -v ~/app:/app openjdk:17 java -jar /app/*.war
